[package]
name = "user_login_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
rust-argon2 = "1.0.0"
scylla = "0.8.1"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
